chore: gradle adaptions