@@ -7,16 +7,15 @@
 plugins {
     id 'application'
     id 'org.openjfx.javafxplugin' version '0.1.0'
-    // id 'org.javamodularity.moduleplugin' version '1.8.12'
     id 'org.beryx.runtime' version '2.0.0-rc'
     // id 'org.unbroken-dome.xjc' version '2.0.0'
     id 'com.github.bjornvester.xjc' version "1.8.2" // https://github.com/bjornvester/xjc-gradle-plugin
 }
 
-/* compileJava {
-    sourceCompatibility = JavaVersion.VERSION_21
-    targetCompatibility = JavaVersion.VERSION_21
-} */
+compileJava {
+    // sourceCompatibility = JavaVersion.VERSION_21
+    // targetCompatibility = JavaVersion.VERSION_21
+}
 
 dependencies {
     // ControlsFX
@@ -36,57 +35,35 @@ dependencies {
     implementation 'net.sf.jasperreports:jasperreports-fonts:6.21.3'
     // implementation 'com.lowagie:itext:2.1.7'
 
-    // JAXB and XML Diff
+    // XML diff / JAXB
     // Note: XML Unit 2.8+ contains all necessary JAXB/Jakarta dependencies
     // see https://github.com/xmlunit/xmlunit/releases/tag/v2.8.0
-    implementation 'org.xmlunit:xmlunit-core:2.9.1'
+    implementation 'org.xmlunit:xmlunit-core:2.10.4'
     implementation 'jakarta.xml.bind:jakarta.xml.bind-api:4.0.2' // javax.xml.bind.annotation
     implementation 'org.glassfish.jaxb:jaxb-runtime:4.0.5'
-    implementation 'org.junit.jupiter:junit-jupiter:5.10.2'
 
     // test dependencies
-    testImplementation('org.junit.jupiter:junit-jupiter:5.10.2')
-    testImplementation 'de.sandec:JMemoryBuddy:0.5.3-TEST2'
+    testImplementation 'org.junit.jupiter:junit-jupiter:5.13.4'
+    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
+
+    testImplementation 'org.testfx:testfx-junit5:4.0.18'
+    testImplementation 'org.assertj:assertj-core:3.27.3' // required for testfx-junit5:4.0.17 and BigDecimal comparison
+    testImplementation 'org.hamcrest:hamcrest-all:1.3' // required for testfx-junit5:4.0.17
+    testImplementation 'de.sandec:JMemoryBuddy:0.5.5'
 }
 
 repositories {
     mavenCentral()
 }
 
-test {
-    // Enable JUnit 5
-    useJUnitPlatform()
-}
-
-/* not needed since non-modular project */
-/* java {
-    modularity.inferModulePath.set(false)
-} */
-
-// org.openjfx.javafxplugin 0.1.0+ issues
-// see https://github.com/openjfx/javafx-gradle-plugin/pull/154
-// e.g., "copy" configuration from the runtimeClasspath over to xjcCatalogResolution
-System.out.println("XXXXXXX: " + configurations);
-/*configurations.xjcCatalogResolution  {
-    def rtCpAttributes = configurations.runtimeClasspath.attributes
-    rtCpAttributes.keySet().each { key ->
-        attributes.attribute(key, rtCpAttributes.getAttribute(key))
+java {
+    toolchain {
+        // Note: 21 causes the following issue in jpackage
+        // Cannot cast object '[/at/oenorm/schema/a2063/_2009_06_01/AekKenndatenType.class]' with class 'java.util.ArrayList' to class 'java.lang.Void'
+        // languageVersion = JavaLanguageVersion.of(17)
+        // languageVersion = JavaLanguageVersion.of(21)
     }
 }
-configurations.testXjcCatalogResolution  {
-    def rtCpAttributes = configurations.runtimeClasspath.attributes
-    rtCpAttributes.keySet().each { key ->
-        attributes.attribute(key, rtCpAttributes.getAttribute(key))
-    }
-}*/
-// e.g., configure manually
-/* configurations.xjcCatalogResolution  {
-    attributes {
-        attribute(Usage.USAGE_ATTRIBUTE, objects.named(Usage, Usage.JAVA_RUNTIME))
-        attribute(OperatingSystemFamily.OPERATING_SYSTEM_ATTRIBUTE, objects.named(OperatingSystemFamily, "linux"))
-        attribute(MachineArchitecture.ARCHITECTURE_ATTRIBUTE, objects.named(MachineArchitecture, "x86-64"))
-    }
-} */
 
 javafx {
     version = '25' // '22.0.1' // '16' // '14.0.2.1'
@@ -95,10 +72,21 @@ javafx {
     modules = ['javafx.base', 'javafx.graphics', 'javafx.controls', 'javafx.swing', 'javafx.fxml', 'javafx.media', 'javafx.web']
 }
 
+test {
+    // Enable JUnit 5
+    useJUnitPlatform()
+}
+
+tasks.withType(JavaCompile).configureEach {
+    options.encoding = 'UTF-8'
+    // ÖNorm uses Umlaut in names
+    // options.compilerArgs << "-Xlint:unchecked" << "-Xlint:deprecation"
+}
+
 xjc {
     xsdDir.set(layout.projectDirectory.dir("src/main/schema")) // by default src/main/resource
-    // options = ["-extension"]
-    options = ["-extension", "-encoding", "UTF-8"]
+    options = ["-extension"]
+    // options = ["-extension", "-encoding", "UTF-8"]
 }
 
 version = '25.09.29'
@@ -108,6 +96,9 @@ application {
     applicationName = 'hello-fx'
     mainClass.set("com.example.hellofx.Launcher")
     applicationDefaultJvmArgs =  [
+            // necessary for JavaFX24+ (see https://gluonhq.com/products/javafx/openjfx-24-release-notes/)
+            // "--enable-native-access=ALL-UNNAMED",
+
             // necessary for ControlsFX
             "--add-opens=javafx.base/com.sun.javafx.event=ALL-UNNAMED",
             "--add-opens=javafx.base/com.sun.javafx.collections=ALL-UNNAMED",
